fix-modular-crash