@@ -26,11 +26,14 @@
 - [x] 在 `INITIAL.md` 中标识已完成的任务
 
 ### 4. 验证与发布 [已完成]
-- [x] 运行 `mvn clean package` 生成可执行 JAR
+- [x] 运行 `mvn clean package` 并复制依赖到 `target/libs`
+- [x] 引入 `module-info.java` 将项目模块化，解决 JavaFX 运行时冲突
+- [x] 修复 JavaFX 渲染/事件导致的闪退问题 (移除 Shade 插件，改用原生模块打包)
 - [x] 修复 FXML 布局不一致导致的启动闪退问题 (VBox -> HBox)
 - [x] 再次修复布局问题：将价格恢复为上下垂直排列 (HBox -> VBox)
 - [x] 增加自动停靠任务栏功能，默认开启
 - [x] 优化拖拽逻辑：未锁定时允许手动拖拽，并自动解除任务栏停靠模式
+- [x] 使用 `jpackage` 结合 `--module-path` 和 `--add-opens` 彻底解决 `MouseEvent$Flags` 闪退
 - [x] 验证 `release/1.3/gold-price-tracker-1.3.0.exe/` 运行正常
 - [x] 运行 `mvn test` 验证单元测试通过
 
